[project]
name = "scrumpoker-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "fastapi==0.115.6",
    "h11==0.14.0",
    "httptools==0.6.1",
    "idna==3.6",
    "pydantic==2.6.4",
    "pydantic-core==2.16.3",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "typing-extensions==4.10.0",
    "uvicorn==0.28.0",
    "watchfiles==0.21.0",
    "websockets==12.0",
]

[dependency-groups]
dev = [
    "httpx==0.27.2",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[tool.setuptools]
packages = ["ScrumpokerAPI"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"